DCS-1582 fixing squashed images

--- a/assets/sass/components/_check-records.scss
+++ b/assets/sass/components/_check-records.scss
@@ -1,5 +1,5 @@
 .prisoner-image {
-  height: 9em;
+  height: 10em;
 }
 
 .width-one-third {
